Enhance header and main visual sections with new layout and styles; add new images to the image cache.

--- a/index.html
+++ b/index.html
@@ -29,14 +29,56 @@
 
 <body>
   <header class="l-header p-header">
-  
+    <div class="p-header__inner">
+      <div class="p-header__heading" role="presentation">
+        <span class="p-header__heading-icon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" width="24" height="24" aria-hidden="true">
+            <path d="M11 17h2v-6h-2v6zm0-8h2V7h-2v2zm1 13C6.48 22 2 17.52 2 12S6.48 2 12 2s10 4.48 10 10-4.48 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16z" fill="currentColor" />
+          </svg>
+        </span>
+        <div class="p-header__heading-inner">
+          <p class="p-header__heading-text">資料請求・お問い合わせをいただき、ありがとうございました。</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="p-header__body l-inner">
+      <p class="p-header__text">資料請求の場合は、ご登録いただいたメールアドレス宛にお送りしましたので後ほどご確認ください。</p>
+      <p class="p-header__text">お問い合わせの場合は、別途3営業日以内に担当よりご連絡しますので少々お待ちください。</p>
+      <p class="p-header__highlight">今回、ご登録をいただいた方へ 特別なお知らせです。</p>
+    </div>
   </header>
   <main>
-    <section class="l-mv p-mv">
-      <h1 class="p-mv__title">Line next LP</h1>
-      <figure class="p-mv__img">
-        <img decoding="async" loading="lazy" src="./images/common/kyusei.jpg" alt="金属の未来をリファイン" width="1400" height="634">
-      </figure>
+    <section class="p-mv">
+      <div class="p-mv__inner">
+        <div class="p-mv__content">
+          <div class="p-mv__left">
+
+            <p class="p-mv__lead">貴社の「採用のお悩みごと」を
+              <br>採マネnext≫で解決できるかお答えします
+              </p>
+  
+            <h1 class="p-mv__title">
+              <div class="p-mv__title-img">
+                <img src="./images/common/mv_text.png" alt="Line next" width="493" height="117">
+              </div>
+              個別相談
+            </h1>
+            <div class="p-mv__box">
+              <figure class="p-mv__box-img">
+                <img src="./images/common/mv_box_img.png" alt="Line next" width="848" height="156">
+              </figure>
+            </div>
+            <p class="p-mv__bottom-text">採マネnext≫と採用のプロフェッショナルが<br>1対1で丁寧にご相談に応じます</p>
+          </div>
+          <div class="p-mv__right">
+            <figure class="p-mv__img">
+              <img decoding="async" loading="lazy" src="./images/common/mv_img.png" alt="" width="535" height="342">
+            </figure>
+          </div>
+        </div>
+
+      </div>
     </section>
 
     <section class="p-mv__copy-box">
@@ -389,5 +431,6 @@
       <p class="p-footer__copy">© 2016-2026 Arrow Link, Inc.</p>
     </div>
   </footer>
+
 </body>
 </html>
