--- a/index.html
+++ b/index.html
@@ -19,14 +19,19 @@
   <!-- ファビコン -->
   <link rel="icon" href="./images/common/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="./images/common/apple-touch-icon.png">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700;900&display=swap" rel="stylesheet">
   <!-- CSS (sassコマンドで自動生成) -->
-  <link rel="stylesheet" href="./css/styles.css">
+   
+  <link rel="stylesheet" href="./css/styles.css?v=20260224">
   <!-- JavaScript -->
   <script defer src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <script defer src="./js/script.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
   <script defer src="./js/gsap.js"></script>
+  <script defer src="./js/script.js"></script>
 </head>
 
 <body>
@@ -34,7 +39,7 @@
     <div class="p-header__inner">
       <div class="p-header__heading" role="presentation">
         <span class="p-header__heading-icon" aria-hidden="true">
-          <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg width="19" height="19" viewBox="0 0 19 19" fill="none">
             <path d="M9.30003 -6.55651e-07C14.4 -6.55651e-07 18.6 4.2 18.6 9.3C18.6 14.4375 14.4 18.6 9.30003 18.6C4.16253 18.6 3.41535e-05 14.4375 3.41535e-05 9.3C3.41535e-05 4.2 4.16253 -6.55651e-07 9.30003 -6.55651e-07ZM9.30003 4.125C8.40003 4.125 7.72503 4.8375 7.72503 5.7C7.72503 6.6 8.40003 7.275 9.30003 7.275C10.1625 7.275 10.875 6.6 10.875 5.7C10.875 4.8375 10.1625 4.125 9.30003 4.125ZM11.4 13.65V12.75C11.4 12.525 11.175 12.3 10.95 12.3H10.5V8.55C10.5 8.325 10.275 8.1 10.05 8.1H7.65003C7.38753 8.1 7.20003 8.325 7.20003 8.55V9.45C7.20003 9.7125 7.38753 9.9 7.65003 9.9H8.10003V12.3H7.65003C7.38753 12.3 7.20003 12.525 7.20003 12.75V13.65C7.20003 13.9125 7.38753 14.1 7.65003 14.1H10.95C11.175 14.1 11.4 13.9125 11.4 13.65Z" fill="white"/>
             </svg>
             
@@ -65,10 +70,7 @@
               <span class="p-mv__title-img">
                 <img decoding="async" loading="lazy" src="./images/common/mv_text.png" alt="Line next" width="493" height="117">
               </span>
-              <p class="p-mv__title-text">
-
-                個別相談
-              </p>
+              <span class="p-mv__title-text">個別相談</span>
             </h1>
             <div class="p-mv__box js-mv-loading">
               <figure class="p-mv__box-img">
