Update index.html and script.js to enhance consultation section functionality; modify call-to-action links for better navigation and remove unused JavaScript code for improved performance. Adjust footer copyright text for localization and add margin styling in SASS for better layout consistency.

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700;900&display=swap" rel="stylesheet">
   <!-- CSS (sassコマンドで自動生成) -->
    
-  <link rel="stylesheet" href="./css/styles.css?v=20260225">
+  <link rel="stylesheet" href="./css/styles.css?v=20260224">
   <!-- JavaScript -->
   <script defer src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
   <script defer src="./js/gsap.js"></script>
-  <script defer src="./js/script.js"></script>
+  <script defer src="./js/script.js?v=20260224"></script>
 </head>
 
 <body>
@@ -96,7 +96,7 @@
           <span class="p-mv__copy-text">最短1分で予約可能</span>
           <span class="p-mv__copy-mark">／</span>
         </p>
-        <a class="p-mv__cta" href="#">
+        <a class="p-mv__cta" href="#anc01">
           <span class="p-mv__cta-icon" aria-hidden="true">
             <svg width="31" height="31" viewBox="0 0 31 31" fill="none">
               <path d="M15.5001 0C24.0626 0 31.0001 6.9375 31.0001 15.5C31.0001 24.0625 24.0626 31 15.5001 31C6.9376 31 9.72748e-05 24.0625 9.72748e-05 15.5C9.72748e-05 6.9375 6.9376 0 15.5001 0ZM22.5626 14.4375L14.1251 6C13.5626 5.4375 12.5626 5.4375 12.0001 6L10.9376 7.0625C10.3751 7.625 10.3751 8.625 10.9376 9.1875L17.3126 15.5L10.9376 21.875C10.3751 22.4375 10.3751 23.4375 10.9376 24L12.0001 25.0625C12.5626 25.625 13.5626 25.625 14.1251 25.0625L22.5626 16.5625C23.1876 16 23.1876 15.0625 22.5626 14.4375Z" fill="white"/>
@@ -105,7 +105,6 @@
           </span>
           <span class="p-mv__cta-text">個別相談予約フォーム</span>
         </a>
-        <p class="p-mv__cta-small">以下のフォームからご予約下さい。</p>
       </div>
     </section>
 
@@ -364,7 +363,7 @@
           <span class="p-mv__copy-text">最短1分で予約可能</span>
           <span class="p-mv__copy-mark">／</span>
         </p>
-        <a class="p-mv__cta" href="#">
+        <a class="p-mv__cta" href="#anc01">
           <span class="p-mv__cta-icon" aria-hidden="true">
             <svg width="31" height="31" viewBox="0 0 31 31" fill="none">
               <path d="M15.5001 0C24.0626 0 31.0001 6.9375 31.0001 15.5C31.0001 24.0625 24.0626 31 15.5001 31C6.9376 31 9.72748e-05 24.0625 9.72748e-05 15.5C9.72748e-05 6.9375 6.9376 0 15.5001 0ZM22.5626 14.4375L14.1251 6C13.5626 5.4375 12.5626 5.4375 12.0001 6L10.9376 7.0625C10.3751 7.625 10.3751 8.625 10.9376 9.1875L17.3126 15.5L10.9376 21.875C10.3751 22.4375 10.3751 23.4375 10.9376 24L12.0001 25.0625C12.5626 25.625 13.5626 25.625 14.1251 25.0625L22.5626 16.5625C23.1876 16 23.1876 15.0625 22.5626 14.4375Z" fill="white"/>
@@ -373,7 +372,6 @@
           </span>
           <span class="p-mv__cta-text">個別相談予約フォーム</span>
         </a>
-        <p class="p-mv__cta-small">以下のフォームからご予約下さい。</p>
 
       </div>
     </section>
@@ -456,7 +454,7 @@
             <span class="p-mv__copy-text">最短1分で予約可能</span>
             <span class="p-mv__copy-mark">／</span>
           </p>
-          <a class="p-mv__cta" href="#">
+          <a class="p-mv__cta" href="#anc01">
             <span class="p-mv__cta-icon" aria-hidden="true">
               <svg width="31" height="31" viewBox="0 0 31 31" fill="none">
                 <path d="M15.5001 0C24.0626 0 31.0001 6.9375 31.0001 15.5C31.0001 24.0625 24.0626 31 15.5001 31C6.9376 31 9.72748e-05 24.0625 9.72748e-05 15.5C9.72748e-05 6.9375 6.9376 0 15.5001 0ZM22.5626 14.4375L14.1251 6C13.5626 5.4375 12.5626 5.4375 12.0001 6L10.9376 7.0625C10.3751 7.625 10.3751 8.625 10.9376 9.1875L17.3126 15.5L10.9376 21.875C10.3751 22.4375 10.3751 23.4375 10.9376 24L12.0001 25.0625C12.5626 25.625 13.5626 25.625 14.1251 25.0625L22.5626 16.5625C23.1876 16 23.1876 15.0625 22.5626 14.4375Z" fill="white"/>
@@ -465,7 +463,11 @@
             </span>
             <span class="p-mv__cta-text">個別相談予約フォーム</span>
           </a>
-        <p class="p-mv__cta-small">以下のフォームからご予約下さい。</p>
+          <p class="p-mv__cta-small">以下のフォームからご予約下さい。</p>
+          <div class="p-flow__contact" id="anc01">
+            <div class="jicoo-widget" data-url="https://www.jicoo.com/event_types/0Vj9sS6SWJ0q/widget" style="min-width:320px;height:720px;border:1px solid #e4e4e4;box-sizing:content-box;"></div>
+            <script type="text/javascript" src="https://www.jicoo.com/widget/event_type.js" async></script>
+          </div>
         </div>
       </div>
     </section>
@@ -476,13 +478,11 @@
   <footer class="p-footer">
     <div class="l-inner p-footer__inner">
       <nav class="p-footer__nav" aria-label="フッター">
-        <a class="p-footer__link" href="#">特定商取引法</a>
-        <span class="p-footer__sep" aria-hidden="true">｜</span>
         <a class="p-footer__link" href="#">プライバシーポリシー</a>
         <span class="p-footer__sep" aria-hidden="true">｜</span>
         <a class="p-footer__link" href="#">会社概要</a>
       </nav>
-      <p class="p-footer__copy">© 2016-2026 Arrow Link, Inc.</p>
+      <p class="p-footer__copy">© 株式会社アローリンク</p>
     </div>
   </footer>
 
